objects/vlocity_ins__ProductRelationship__c.object
<CustomObject>
    <description>Represents relationships between two insurance products and their child components which defines the optional coverage specifications for a policy.</description>
    <fields>
        <fullName>vlocity_ins__ActionParameters__c</fullName>
        <label>Action Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AddMode__c</fullName>
        <description>for add ,this specifies the mode</description>
        <label>AddMode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asSibling</fullName>
                    <default>true</default>
                    <label>asSibling</label>
                </value>
                <value>
                    <fullName>asChild</fullName>
                </value>
                <value>
                    <fullName>asRoot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeModificationContext__c</fullName>
        <label>Attribute Modification Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Context__c</fullName>
        <label>Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Modem</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>VOIP</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Repair Package</fullName>
                </value>
                <value>
                    <fullName>Power Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsConditional__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Conditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MaxQuantity__c</fullName>
        <description>Defines the maximum instances of relationship for each relationship type the subject product or Object type can have with the related product or related Object Type  to satisfy the relationship.</description>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MinQuantity__c</fullName>
        <description>Defines the minumum instances of relationship for each relationship type the subject product or Object type can have with the related product or related Object Type to satisfy the relationship.</description>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the subject object type for which this relationship is defined. Used instead of Product2Id__c to define the relationship for all products of this object type. In a &quot;Relies On&quot; relationship, this identifies the class of product (object type) that has a dependency on a related product (or class of product).</description>
        <label>Object Type</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>ProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the subject product for which this relationship is defined. For an &quot;Excludes&quot; relationship, this identifies the product that excludes another product. For a &quot;Relies On&quot; relationship, this identifies the product which has a dependency on another product.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>RelatedProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Child Item</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>ProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the object type related to the subject product in this relationship. Used instead of RelatedProductId__c to define the relationship for all products of this object type. For a &quot;Relies On&quot; relationship, this identifies the class of product (object type) that can fulfill the dependency of the subject product.</description>
        <label>Related Object Type</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Product Relationships (Related)</relationshipLabel>
        <relationshipName>RelatedProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedProductChildItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product Child Item</label>
        <referenceTo>vlocity_ins__ProductChildItem__c</referenceTo>
        <relationshipLabel>Product Relationships (Related Product Child Item)</relationshipLabel>
        <relationshipName>RelatedProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedProductChildItemParentId__c</fullName>
        <description>Formula field linking the Related Product Child Item Parent Product Id</description>
        <formula>CASESAFEID(vlocity_ins__RelatedProductChildItemId__r.vlocity_ins__ParentProductId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Product Child Item Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedProductFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product Qualifying Filter</label>
        <referenceTo>vlocity_ins__EntityFilter__c</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>ProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the product related to the subject product in this relationship. For an &quot;Excludes&quot; relationship, this identifies a product excluded by the subject product. For a &quot;Relies On&quot; relationship, this identifies the product that can fulfill the dependency of the subject product.</description>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>ProductRelations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipType__c</fullName>
        <description>The type of relationship such as Recommends, Requires, Excludes, Auto-Add, Auto-Remove, Auto-Replace, Modify Attributes and Relies On.</description>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto-Add</fullName>
                </value>
                <value>
                    <fullName>Auto-Remove</fullName>
                </value>
                <value>
                    <fullName>Auto-Replace</fullName>
                </value>
                <value>
                    <fullName>Recommends</fullName>
                </value>
                <value>
                    <fullName>Requires</fullName>
                </value>
                <value>
                    <fullName>Excludes</fullName>
                </value>
                <value>
                    <fullName>Specification</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Modify Attributes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReverseMaxQuantity__c</fullName>
        <description>For each Relationship type, it defines  the maximum instances of relationship the related product or related Object type can have with the subject product or subject Object Type  to satisfy the relationship.</description>
        <label>Reverse Max Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReverseMinQuantity__c</fullName>
        <description>For each Relationship type, it defines the minumum number instances of relationship the related product or related Object type can have with the subject product or subject Object Type to satisfy the relationship.</description>
        <label>Reverse Min Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Product Relationship</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__Default_quntity_cannot_be_zero</fullName>
        <active>true</active>
        <description>Default quantity should not be zero.</description>
        <errorConditionFormula>vlocity_ins__DefaultQuantity__c = 0</errorConditionFormula>
        <errorMessage>Default quantity should not be zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_ins__Min_Max_should_build_a_valid_range</fullName>
        <active>true</active>
        <description>Min &amp; Max should build a valid range</description>
        <errorConditionFormula>NOT ( AND ( (vlocity_ins__MinQuantity__c  &lt;= vlocity_ins__MaxQuantity__c),(  vlocity_ins__DefaultQuantity__c &lt;= vlocity_ins__MaxQuantity__c),( vlocity_ins__DefaultQuantity__c &gt;= vlocity_ins__MinQuantity__c)) )</errorConditionFormula>
        <errorMessage>Min Quantity should be less than or equal to Max Quantity And Default Quantity should be in between Min &amp; Max Quantity</errorMessage>
    </validationRules>
</CustomObject>